eacer.watchlist/kr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlist-kr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlist-kr
  template:
    metadata:
      labels:
        app: watchlist-kr
    spec:
      containers:
        - name: watchlist-kr
          image: eacer/watchlist:main
          ports:
            - containerPort: 3000
